  im Format <123, um kleinere Werte zu suchen (z.B. Bevölkerung, Forschung, Industrie, Resswerte)
* Todessterne werden jetzt als Resonatoren erkannt
* Die Adresse, über welche der Spieler auf OD zugreift, wird jetzt gespeichert und
  bei Verlinkungen auf OD verwendet
* Das Log ist jetzt IPv6-tauglich
* Upgrade auf jQuery 1.9.1

Admin-Bereich
* Cronjob-Log
* Statistik-Anzeigen geändert



17.01.2013 - V2.2.5
-------------------
* Neue automatische Planetenkategorie "Credit-Ausbau" (nur neu eingescannte Planeten)
* System-Scans löschen jetzt Planeten-Aktionen, Terraformer und Natives, wenn der Orbit leer ist
* Als unbenutzbar eingetragene Sprunggeneratoren werden jetzt im FoW immer ausgeblendet
* kleinere Bugfixes



30.12.2012 - V2.2.4
-------------------
* Die Gebäude-, Schiffe- und Systeme-Forschung kann nun eingeparst werden
* Forschungsübersicht
* Erweiterungen der Werftübersicht
  - Verbündete Werften können jetzt nach Entfernung sortiert werden
  - Schnellauswahlfeld für den Werftbedarf
* Rewrite des Mainscreen-Parsers
* Die FoW-Einstellungen für Scout-Systeme kann jetzt den globalen Wert für veraltete Systeme annehmen
* Planetenkommentare können bei Doppelklick gelöscht werden
* Das Suchfeld für den Planetenkommentar findet jetzt auch Benutzername und ID des Erstellers



09.12.2012 - V2.2.3
-------------------
* DB-Abgleiche funktionieren nun korrekt und haben einen Fortschrittsbalken
* Beim Systemscan werden nun auch Besatzungen eingetragen
* Bugfix: Beim Orbit-Scan wird der Aggressor bei einer Besatzung wieder korrekt eingetragen
* Erneuter Versuch, das ODDB Tool UMTS-tauglich zu machen



02.11.2012 - V2.2.2
-------------------
* Anpassung des Parsers an die neue Flottenübersicht
* FoW-Suchfilter können nun Planeten auch nur außerhalb des Systems finden
* Natives werden auch beim Systemscan eingetragen



 10.10.2012 - V2.2.1
--------------------
* Erweiterung der Suchfunktion
  - Suchfilter für laufende Aktionen