@@ -51,6 +51,7 @@ if(!@include('../config/global.php')) {
 $gconfig = $config;
 define('GLOBPREFIX', $config['mysql_globprefix']);
 
+$dbs = array();
 include '../config/dbs.php';
 
 // falscher Sicherheitsschlüssel
@@ -59,7 +60,6 @@ if(!isset($_GET['key']) OR $_GET['key'] != $config['key']) {
 }
 
 // Instanz-Array umformen
-if(!$dbs) $dbs = array(1=>'');
 $dbs = array_keys($dbs);
 
 // MySQL-Verbindung
